# Copyright (C) 2008 Tai Sakuma <sakuma@mit.edu>

AC_INIT(StJetMakerTree, 2.0.1)
AM_INIT_AUTOMAKE

#AC_DISABLE_SHARED

AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_LIBTOOL

ROOT_PATH(, AC_DEFUN(HAVE_ROOT))

AC_LANG(C++)

AC_CONFIG_FILES([
	Makefile
	tracks/Makefile
	towers/Makefile
	fourvec/Makefile
	mcparticles/Makefile
	misc/Makefile
	mckin/Makefile
	tree/Makefile
	trigger/Makefile
	vertex/Makefile
	jets/Makefile
	dijets/Makefile
	])
AC_OUTPUT
