# Copyright (C) 2008 Tai Sakuma <sakuma@mit.edu>

sources	= \
	StjBEMC.cxx \
	StjBEMCNull.cxx \
	StjBEMCTree.cxx \
	StjBEMCTxt.cxx \
	StjDijetCut.cxx \
	StjDijetCutAsymmetricPt.cxx \
	StjDijetCutDPhi.cxx \
	StjDijetCutEta.cxx \
	StjDijetCutEta3MinusEta4.cxx \
	StjDijetCutTrgBHT.cxx \
	StjDijetCutTrgBJP.cxx \
	StjDijetList.cxx \
	StjDijetListCut.cxx \
	StjDijetPrint.cxx \
	StjEEMC.cxx \
	StjEEMCNull.cxx \
	StjEEMCTxt.cxx \
	StjFormDijet.cxx \
	StjFourVecCut.cxx \
	StjFourVecCutPt.cxx \
	StjFourVecCutTrgBHT.cxx \
	StjFourVecCutTrgBJP.cxx \
	StjFourVecList.cxx \
	StjFourVecListCut.cxx \
	StjFourVecPrint.cxx \
	StjJetCut.cxx \
	StjJetCutDetectorEta.cxx \
	StjJetCutEta.cxx \
	StjJetCutNFourVecs.cxx \
	StjJetCutPt.cxx \
	StjJetCutTrgBHT.cxx \
	StjJetCutTrgBJP.cxx \
	StjJetList.cxx \
	StjJetListCut.cxx \
	StjJetPrint.cxx \
	StjMC.cxx \
	StjMCNull.cxx \
	StjMCParticleCut.cxx \
	StjMCParticleCutEta.cxx \
	StjMCParticleCutEtaForStatus.cxx \
	StjMCParticleCutStatus.cxx \
	StjMCParticleList.cxx \
	StjMCParticleListCut.cxx \
	StjMCParticleListToFourVecList.cxx \
	StjMCParticlePrint.cxx \
	StjMCParticleToFourVec.cxx \
	StjMCTree.cxx \
	StjTPC.cxx \
	StjTPCNull.cxx \
	StjTPCTree.cxx \
	StjTPCTxt.cxx \
	StjTowerEnergyCorrectionForTracks.cxx \
	StjTowerEnergyCut.cxx \
	StjTowerEnergyCut2003BemcTower.cxx \
	StjTowerEnergyCutAdc.cxx \
	StjTowerEnergyCutBemcStatus.cxx \
	StjTowerEnergyCutBemcWestOnly.cxx \
	StjTowerEnergyCutEnergy.cxx \
	StjTowerEnergyCutEt.cxx \
	StjTowerEnergyList.cxx \
	StjTowerEnergyListCut.cxx \
	StjTowerEnergyListVariation.cxx \
	StjTowerEnergyPrint.cxx \
	StjTowerEnergyToFourVec.cxx \
	StjTowerEnergyToTLorentzVector.cxx \
	StjTowerEnergyVariation.cxx \
	StjTowerEnergyVariationEnergy.cxx \
	StjTrackCut.cxx \
	StjTrackCutDca.cxx \
	StjTrackCutDcaPtDependent.cxx \
	StjTrackCutEta.cxx \
	StjTrackCutFlag.cxx \
	StjTrackCutNHits.cxx \
	StjTrackCutPossibleHitRatio.cxx \
	StjTrackList.cxx \
	StjTrackListCut.cxx \
	StjTrackPrint.cxx \
	StjTrackToFourVec.cxx \
	StjTrackToTLorentzVector.cxx \
	StjTrackTowerEnergyListToFourVecList.cxx

headers	= \
	StjBEMC.h \
	StjBEMCNull.h \
	StjBEMCTree.h \
	StjBEMCTxt.h \
	StjDijetCut.h \
	StjDijetCutAsymmetricPt.h \
	StjDijetCutDPhi.h \
	StjDijetCutEta.h \
	StjDijetCutEta3MinusEta4.h \
	StjDijetCutTrgBHT.h \
	StjDijetCutTrgBJP.h \
	StjDijetList.h \
	StjDijetListCut.h \
	StjDijetPrint.h \
	StjEEMC.h \
	StjEEMCNull.h \
	StjEEMCTxt.h \
	StjFormDijet.h \
	StjFourVecCut.h \
	StjFourVecCutPt.h \
	StjFourVecCutTrgBHT.h \
	StjFourVecCutTrgBJP.h \
	StjFourVecList.h \
	StjFourVecListCut.h \
	StjFourVecPrint.h \
	StjJetCut.h \
	StjJetCutDetectorEta.h \
	StjJetCutEta.h \
	StjJetCutNFourVecs.h \
	StjJetCutPt.h \
	StjJetCutTrgBHT.h \
	StjJetCutTrgBJP.h \
	StjJetList.h \
	StjJetListCut.h \
	StjJetPrint.h \
	StjMC.h \
	StjMCNull.h \
	StjMCParticleCut.h \
	StjMCParticleCutEta.h \
	StjMCParticleCutEtaForStatus.h \
	StjMCParticleCutStatus.h \
	StjMCParticleList.h \
	StjMCParticleListCut.h \
	StjMCParticleListToFourVecList.h \
	StjMCParticlePrint.h \
	StjMCParticleToFourVec.h \
	StjMCTree.h \
	StjTPC.h \
	StjTPCNull.h \
	StjTPCTree.h \
	StjTPCTxt.h \
	StjTowerEnergyCorrectionForTracks.h \
	StjTowerEnergyCut.h \
	StjTowerEnergyCut2003BemcTower.h \
	StjTowerEnergyCutAdc.h \
	StjTowerEnergyCutBemcStatus.h \
	StjTowerEnergyCutBemcWestOnly.h \
	StjTowerEnergyCutEnergy.h \
	StjTowerEnergyCutEt.h \
	StjTowerEnergyList.h \
	StjTowerEnergyListCut.h \
	StjTowerEnergyListVariation.h \
	StjTowerEnergyPrint.h \
	StjTowerEnergyToFourVec.h \
	StjTowerEnergyToTLorentzVector.h \
	StjTowerEnergyVariation.h \
	StjTowerEnergyVariationEnergy.h \
	StjTrackCut.h \
	StjTrackCutDca.h \
	StjTrackCutDcaPtDependent.h \
	StjTrackCutEta.h \
	StjTrackCutFlag.h \
	StjTrackCutNHits.h \
	StjTrackCutPossibleHitRatio.h \
	StjTrackList.h \
	StjTrackListCut.h \
	StjTrackPrint.h \
	StjTrackToFourVec.h \
	StjTrackToTLorentzVector.h \
	StjTrackTowerEnergyListToFourVecList.h


lib_LTLIBRARIES = libStJetMakerBase.la

libStJetMakerBase_la_SOURCES = $(sources) $(headers) BaseLinkDef.h
libStJetMakerBase_la_CXXFLAGS = -I../tree -I../trigger $(ROOTCFLAGS)
libStJetMakerBase_la_LDFLAGS = -version-info 1:0:0
nodist_libStJetMakerBase_la_SOURCES = BaseDict.cxx
BUILT_SOURCES = BaseDict.cxx
CLEANFILES = BaseDict.cxx BaseDict.h
BaseDict.cxx: $(headers) BaseLinkDef.h
	$(ROOTCINT) -f $@ -c $^
